--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 </head>
 <body>
 
+  <h1>자기개발</h1>
+
   <h2>📌 생산성</h2>
   <div class="card-grid">
     <a href="https://www.notion.so/" target="_blank" class="card">
@@ -86,13 +88,17 @@
       <i class="fa-solid fa-table fa-2x icon"></i>
       <span>스프레드시트</span>
     </a>
+    <a href="https://docs.google.com/document/u/0/" target="_blank" class="card">
+      <i class="fa-solid fa-file fa-2x icon"></i>
+      <span>구글 독스</span>
+    </a>
     <a href="https://mail.naver.com/" target="_blank" class="card">
       <i class="fa-solid fa-envelope fa-2x icon"></i>
       <span>네이버 메일</span>
     </a>
   </div>
 
-  <h2>📌 커리어</h2>
+  <h2>📌 커리어 관리</h2>
   <div class="card-grid">
     <a href="https://www.catch.co.kr/" target="_blank" class="card">
       <i class="fa-solid fa-briefcase fa-2x icon"></i>
@@ -102,30 +108,131 @@
       <i class="fa-solid fa-user-tie fa-2x icon"></i>
       <span>Linked In</span>
     </a>
-    <a href="https://www.yakup.com/" target="_blank" class="card">
-      <i class="fa-solid fa-capsules fa-2x icon"></i>
-      <span>약업신문</span>
-    </a>
     <a href="https://github.com/" target="_blank" class="card">
       <i class="fa-solid fa-code fa-2x icon"></i>
       <span>Git_Hub</span>
     </a>
+    <a href="https://www.vms.or.kr/main.do" target="_blank" class="card">
+      <i class="fa-solid fa-handshake-angle fa-2x icon"></i>
+      <span>봉사인증</span>
+    </a>
+    <a href="https://www.snbokji.net/7156" target="_blank" class="card">
+      <i class="fa-solid fa-user-plus fa-2x icon"></i>
+      <span>미취업 청년 사업</span>
+    </a>
   </div>
 
-  <h2>📌 AI Tool</h2>
+  <h2>📌 제약</h2>
   <div class="card-grid">
-    <a href="https://chat.openai.com" target="_blank" class="card">
-      <i class="fa-solid fa-robot fa-2x icon"></i>
-      <span>ChatGPT</span>
+    <a href="https://www.yakup.com/" target="_blank" class="card">
+      <i class="fa-solid fa-capsules fa-2x icon"></i>
+      <span>약업신문</span>
     </a>
-    <a href="https://x.ai/grok" target="_blank" class="card">
-      <i class="fa-solid fa-brain fa-2x icon"></i>
-      <span>xAI 그록</span>
+    <a href="https://sfa.ssart.co.kr/" target="_blank" class="card">
+      <i class="fa-solid fa-chart-simple fa-2x icon"></i>
+      <span>ss-chart</span>
     </a>
-    <a href="https://suno.com/" target="_blank" class="card">
-      <i class="fa-solid fa-music fa-2x icon"></i>
-      <span>AI 음악</span>
+    <a href="https://www.health.kr/main.asp" target="_blank" class="card">
+      <i class="fa-solid fa-prescription-bottle-medical fa-2x icon"></i>
+      <span>약학정보원</span>
     </a>
+  </div>
+
+  <h2>📌 데이터</h2>
+  <div class="card-grid">
+    <a href="https://krdi.co.kr" target="_blank" class="card">
+      <i class="fa-solid fa-square-binary fa-2x icon"></i>
+      <span>한국 정보 인재개발원</span>
+    </a>
+    <a href="https://datarian.io/blog?utm_source=newsletter&utm_medium=email&utm_campaign=blog&utm_content=footer" target="_blank" class="card">
+      <i class="fa-solid fa-users fa-2x icon"></i>
+      <span>데이터리안</span>
+    </a>
+    <a href="https://datarian.io/blog/how-to-find-data-for-data-analysis-project?utm_source=newsletter&utm_medium=email&utm_campaign=referral&utm_content=230905" target="_blank" class="card">
+      <i class="fa-solid fa-database fa-2x icon"></i>
+      <span>데이터분석 프로젝트</span>
+    </a>
+    <a href="https://audioclip.naver.com/channels/11570" target="_blank" class="card">
+      <i class="fa-solid fa-headphones-simple fa-2x icon"></i>
+      <span>데이터 과몰입 클럽</span>
+    </a>
+    <a href="https://www.dataq.or.kr/www/sub/a_07.do" target="_blank" class="card">
+      <i class="fa-solid fa-stamp fa-2x icon"></i>
+      <span>데이터 자격증</span>
+    </a>
+  </div>
+
+  <h2>📌 교육기타</h2>
+  <div class="card-grid">
+    <a href="https://class101.net/" target="_blank" class="card">
+      <i class="fa-solid fa-chalkboard-user fa-2x icon"></i>
+      <span>클래스101</span>
+    </a>
+    <a href="https://classe.ebs.co.kr/" target="_blank" class="card">
+      <i class="fa-solid fa-school fa-2x icon"></i>
+      <span>클래스 E</span>
+    </a>
+    <a href="https://www.kmooc.kr" target="_blank" class="card">
+      <i class="fa-solid fa-graduation-cap fa-2x icon"></i>
+      <span>K-MOOC</span>
+    </a>
+    <a href="https://www.springfieldspringfield.co.uk" target="_blank" class="card">
+      <i class="fa-solid fa-scroll fa-2x icon"></i>
+      <span>미드 대본</span>
+    </a>
+  </div>
+
+
+  <h1>취미</h1>
+
+  <h2>📌 놀러가기</h2>
+  <div class="card-grid">
+    <a href="https://www.popply.co.kr/" target="_blank" class="card">
+      <i class="fa-solid fa-ticket fa-2x icon"></i>
+      <span>팝플리</span>
+    </a>
+    <a href="https://korean.visitkorea.or.kr/kfes/list/wntyFstvlList.do" target="_blank" class="card">
+      <i class="fa-solid fa-calendar-days fa-2x icon"></i>
+      <span>전국축제</span>
+    </a>
+    </a>
+    <a href="https://여기유.com/festival" target="_blank" class="card">
+      <i class="fa-solid fa-calendar fa-2x icon"></i>
+      <span>여기유</span>
+    </a>
+    <a href="https://yeyak.seoul.go.kr/web/loginForm.do?ru=aHR0cHM6Ly95ZXlhay5zZW91bC5nby5rci93ZWIvcmVzZXJ2YXRpb24vc2VsZWN0UmVzZXJ2Vmlldy5kbz9yc3Zfc3ZjX2lkPVMyMzA5MTIxNzE4MDk3ODAwNzk=" target="_blank" class="card">
+      <i class="fa-solid fa-arrow-pointer fa-2x icon"></i>
+      <span>서울 공공서비스 예약</span>
+    </a>    
+    <a href="https://www.coex.co.kr/" target="_blank" class="card">
+      <i class="fa-solid fa-building fa-2x icon"></i>
+      <span>코엑스</span>
+    </a>
+  </div>
+
+  <h2>📌 컨텐츠</h2>
+  <div class="card-grid">
+    <a href="https://kr.linkkf.net/" target="_blank" class="card">
+      <i class="fa-solid fa-film fa-2x icon"></i>
+      <span>Linkkf</span>
+    </a>
+    <a href="https://manatoki468.net/" target="_blank" class="card">
+      <i class="fa-solid fa-book-journal-whills fa-2x icon"></i>
+      <span>마나토끼</span>
+    </a>
+    <a href="https://www.netflix.com/kr/" target="_blank" class="card">
+      <i class="fa-solid fa-tv fa-2x icon"></i>
+      <span>넷플릭스</span>
+    </a>
+    </a>
+    <a href="https://www.youtube.com" target="_blank" class="card">
+      <i class="fa-solid fa-video fa-2x icon"></i>
+      <span>유튜브</span>
+    </a>
+    <a href="https://www.aladin.co.kr/m/mbrowse.aspx?cid=52153" target="_blank" class="card">
+      <i class="fa-solid fa-bookmark fa-2x icon"></i>
+      <span>무료e북</span>
+    </a>    
   </div>
 
   <h2>📌 SNS</h2>
@@ -142,25 +249,30 @@
       <i class="fa-solid fa-blog fa-2x icon"></i>
       <span>무로그</span>
     </a>
-  </div>
+    <a href="https://pedia.watcha.com/ko-KR" target="_blank" class="card">
+      <i class="fa-solid fa-clapperboard fa-2x icon"></i>
+      <span>왓챠피디아</span>
+    </a>
 
-  <h2>📌 유</h2>
+  </div>  
+
+  <h2>📌 AI Tool</h2>
   <div class="card-grid">
-    <a href="https://kemono.su/" target="_blank" class="card">
-      <i class="fa-solid fa-mask fa-2x icon"></i>
-      <span>Kemono</span>
+    <a href="https://chat.openai.com" target="_blank" class="card">
+      <i class="fa-solid fa-robot fa-2x icon"></i>
+      <span>ChatGPT</span>
     </a>
-    <a href="https://eromangarev.blog/time-stop-brave21" target="_blank" class="card">
-      <i class="fa-solid fa-clock fa-2x icon"></i>
-      <span>시간정지용사 무삭</span>
+    <a href="https://x.ai/grok" target="_blank" class="card">
+      <i class="fa-solid fa-brain fa-2x icon"></i>
+      <span>xAI 그록</span>
     </a>
-    <a href="https://chyoa.com/chapter/Work-her-over.429522" target="_blank" class="card">
-      <i class="fa-solid fa-book-open fa-2x icon"></i>
-      <span>CHYOA</span>
+    <a href="https://akuma.ai/login" target="_blank" class="card">
+      <i class="fa-solid fa-paint-brush fa-2x icon"></i>
+      <span>아쿠마 AI</span>
     </a>
-    <a href="https://hotssul.com/" target="_blank" class="card">
-      <i class="fa-solid fa-fire fa-2x icon"></i>
-      <span>핫썰</span>
+    <a href="https://suno.com/" target="_blank" class="card">
+      <i class="fa-solid fa-music fa-2x icon"></i>
+      <span>AI 음악</span>
     </a>
   </div>
 
@@ -190,57 +302,6 @@
       <i class="fa-solid fa-gamepad fa-2x icon"></i>
       <span>포켓몬 스토어</span>
     </a>
-
-
-  </div>
-
-  <h2>📌 놀러가기</h2>
-  <div class="card-grid">
-    <a href="https://www.popply.co.kr/" target="_blank" class="card">
-      <i class="fa-solid fa-ticket fa-2x icon"></i>
-      <span>팝플리</span>
-    </a>
-    <a href="https://korean.visitkorea.or.kr/kfes/list/wntyFstvlList.do" target="_blank" class="card">
-      <i class="fa-solid fa-calendar-days fa-2x icon"></i>
-      <span>전국축제</span>
-    </a>
-    <a href="https://www.coex.co.kr/" target="_blank" class="card">
-      <i class="fa-solid fa-building fa-2x icon"></i>
-      <span>코엑스</span>
-    </a>
-  </div>
-
-  <h2>📌 컨텐츠</h2>
-  <div class="card-grid">
-    <a href="https://kr.linkkf.net/" target="_blank" class="card">
-      <i class="fa-solid fa-film fa-2x icon"></i>
-      <span>Linkkf</span>
-    </a>
-    <a href="https://manatoki468.net/" target="_blank" class="card">
-      <i class="fa-solid fa-book-journal-whills fa-2x icon"></i>
-      <span>마나토끼</span>
-    </a>
-    <a href="https://www.netflix.com/kr/" target="_blank" class="card">
-      <i class="fa-solid fa-tv fa-2x icon"></i>
-      <span>넷플릭스</span>
-    </a>
-    </a>
-    <a href="https://www.youtube.com" target="_blank" class="card">
-      <i class="fa-solid fa-video fa-2x icon"></i>
-      <span>유튜브</span>
-    </a>
-  </div>
-
-  <h2>📌 교육</h2>
-  <div class="card-grid">
-    <a href="https://class101.net/" target="_blank" class="card">
-      <i class="fa-solid fa-chalkboard-user fa-2x icon"></i>
-      <span>클래스101</span>
-    </a>
-    <a href="https://classe.ebs.co.kr/" target="_blank" class="card">
-      <i class="fa-solid fa-graduation-cap fa-2x icon"></i>
-      <span>클래스 E</span>
-    </a>
   </div>
 
   <h2>📌 괴담</h2>
@@ -256,6 +317,22 @@
 
   </div>
 
+  <h2>📌 우파루</h2>
+  <div class="card-grid">
+    <a href="https://wooparoo-odyssey.hangame.com/coupon" target="_blank" class="card">
+      <i class="fa-solid fa-receipt fa-2x icon"></i>
+      <span>우파루 쿠폰입력</span>
+    </a>
+    <a href="https://cloneclone-xvbfpuafrf3cgfjfmt2jdz.streamlit.app" target="_blank" class="card">
+      <i class="fa-solid fa-shuffle fa-2x icon"></i>
+      <span>우파루 가상크로스</span>
+    </a>
+    <a href="https://docs.google.com/spreadsheets/u/0/d/1NXFvj2j9kyVwxBOV1MPCwU9yBdH9iHysgzM0JZanUJA/htmlview" target="_blank" class="card">
+      <i class="fa-solid fa-signal fa-2x icon"></i>
+      <span>우파루 스탯표</span>
+    </a>
+  </div>
+
   <h2>📌 생존</h2>
   <div class="card-grid">
     <a href="https://m.blog.naver.com/PostList.naver?blogId=kjongdo&tab=1" target="_blank" class="card">
@@ -263,22 +340,113 @@
       <span>부시크래프트</span>
     </a>
     <a href="https://m.dcinside.com/board/dcbest/145916" target="_blank" class="card">
-      <i class="fa-solid fa-person-hiking fa-2x icon"></i>
+      <i class="fa-solid fa-heart-pulse fa-2x icon"></i>
       <span>보스니아 생존기</span>
     </a>
   </div>
 
+  <h2>📌 생물 키우기</h2>
+  <div class="card-grid">
+    <a href="https://aerok9.tistory.com/92" target="_blank" class="card">
+      <i class="fa-solid fa-fish-fins fa-2x icon"></i>
+      <span>거북 수족관 수경식물</span>
+    </a>
+    <a href="0000" target="_blank" class="card">
+      <i class="fa-solid fa-question fa-2x icon"></i>
+      <span>??</span>
+    </a>
+  </div>  
+
   <h2>📌 기타</h2>
   <div class="card-grid">
     <a href="https://shinhanlife.sinbiun.com/" target="_blank" class="card">
-      <i class="fa-solid fa-star fa-2x icon"></i>
+      <i class="fa-solid fa-clover fa-2x icon"></i>
       <span>신한 운세</span>
     </a>
     <a href="https://hometax.go.kr/websquare/websquare.html?w2xPath=/ui/pp/index_pp.xml&menuCd=index3" target="_blank" class="card">
       <i class="fa-solid fa-file-invoice-dollar fa-2x icon"></i>
       <span>홈택스</span>
     </a>
+    <a href="https://www.cckjokbo.com/jokbo/hyor/jokbo.php" target="_blank" class="card">
+      <i class="fa-solid fa-diagram-project fa-2x icon"></i>
+      <span>효령대군파 족보</span>
+    </a>
+    <a href="https://qquing.net/bbs/board.php?bo_table=manga&wr_id=156525#_PA" target="_blank" class="card">
+      <i class="fa-solid fa-credit-card fa-2x icon"></i>
+      <span>유희왕 룰 설명만화</span>
+    </a>
+    <a href="https://www.personality-database.com/profile?personality=11" target="_blank" class="card">
+      <i class="fa-solid fa-chart-line fa-2x icon"></i>
+      <span>가상캐릭터 MBTI</span>
+    </a>
   </div>
+
+<!-- 투명 토글 버튼 -->
+<button id="toggleBtn" style="
+  all: unset;
+  position: relative;
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  display: block;
+  z-index: 10;
+"></button>
+
+<!-- 기본은 숨김 상태 -->
+<div class="card-grid" id="cardGrid" style="display: none;">
+  <a href="https://kemono.su/" target="_blank" class="card">
+    <i class="fa-solid fa-mask fa-2x icon"></i>
+    <span>Kemono</span>
+  </a>
+  <a href="https://eromangarev.blog/time-stop-brave21" target="_blank" class="card">
+    <i class="fa-solid fa-clock fa-2x icon"></i>
+    <span>시간정지용사</span>
+  </a>
+  <a href="https://m.fanfox.net/manga/momi_baraishi/" target="_blank" class="card">
+    <i class="fa-solid fa-person-breastfeeding fa-2x icon"></i>
+    <span>momibarai</span>
+  </a>
+  <a href="https://chyoa.com/chapter/Work-her-over.429522" target="_blank" class="card">
+    <i class="fa-solid fa-book-open fa-2x icon"></i>
+    <span>CHYOA</span>
+  </a>
+  <a href="https://hotssul.com/" target="_blank" class="card">
+    <i class="fa-solid fa-fire fa-2x icon"></i>
+    <span>핫썰</span>
+  </a>
+</div>
+
+<!-- 카드 스타일 및 배치 -->
+<style>
+  .card-grid {
+    display: grid;
+    grid-auto-flow: column; /* 가로 배치 */
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+  }
+</style>
+
+<script>
+  const toggleBtn = document.getElementById('toggleBtn');
+  const cardGrid = document.getElementById('cardGrid');
+
+  let isVisible = false;
+
+  toggleBtn.addEventListener('click', () => {
+    isVisible = !isVisible;
+    cardGrid.style.display = isVisible ? 'grid' : 'none';
+  });
+</script>
+
+
 
 </body>
 </html>
